demos/deployments-rolling-updates/good/deployment-rolling.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployments-rolling-updates-rolling
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployments-rolling-updates-rolling
  template:
    metadata:
      labels:
        app: deployments-rolling-updates-rolling
    spec:
      containers:
        - name: app
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
