demos/deployments-rolling-updates/good/service-recreate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deployments-rolling-updates-recreate
spec:
  selector:
    app: deployments-rolling-updates-recreate
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
